[gd_scene load_steps=6 format=3 uid="uid://b5q2padfpnlr"]

[ext_resource type="Script" path="res://player/player.gd" id="1_77cfc"]
[ext_resource type="Texture2D" uid="uid://d3dkctvw44m6v" path="res://icon.svg" id="2_wuocm"]
[ext_resource type="PackedScene" uid="uid://cj3kbaaj4va3y" path="res://player/weapons/gun.tscn" id="3_5d34k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hjkw7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3wpee"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_77cfc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wuocm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_hjkw7")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="playerHurtbox" type="Area2D" parent="." groups=["player"]]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHurtbox"]
scale = Vector2(7, 7)
shape = SubResource("CircleShape2D_3wpee")
debug_color = Color(0.992157, 0, 0.258824, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_5d34k")]

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="playerHurtbox" to="." method="_on_player_hurtbox_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
